<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="emailHint">Email</string>
    <string name="nameHint">Имя</string>
    <string name="passwordHint">Пароль</string>
    <string name="passwordConfirmHint">Повторите пароль</string>
    <string name="btnSignUp">Зарегистрироваться</string>
    <string name="badEmail">Неверный формат логина</string>
    <string name="badName">Имя должно содержать минимум 2 значащих символов</string>
    <string name="badPassword">Длина пароля должна быть не менее 6 символов и не содержать пробелы</string>
    <string name="badConfirm">Подтверждение пароля не совпадает!</string>
    <string name="auth_in_rtdb_return_false">Auth in RTDB return false</string>
    <string name="registrationErrorTitle">Ошибка регистрации</string>
    <string name="registrationErrorMessage">Пользователь с данным логином уже зарегистрирован. Если вы забыли пароль от аккаунта, перейдите на страницу восстановления пароля.</string>
    <string name="OK">Ок</string>
    <string name="suucessRegistrationTitle">Успешная регистрация</string>
    <string name="suucessRegistrationText">Ваш аккаунт успешно зарегистрирован</string>
</resources>